--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -52,14 +52,14 @@
     <section id="nav-footer" class="blue-background">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <span class="white-font">Our Company</span><br/>
+                <div class="offset-3 col-md-3 pt-5 pb-5">
+                    <span class="white-font" style="font-variant: titling-caps;">Our Company</span><br/><br/>
                     <span class="orange-font"><a href="{% url 'store:our-purpose' %}">Our Purpose</a></span><br/>
                     <span class="orange-font"><a href="{% url 'store:return-policy' %}">Return Policy</a></span><br/>
                     <span class="orange-font"><a href="{% url 'store:privacy-policy' %}">Privacy Policy</a></span>
                 </div>
-                <div class="col-md-6">
-                    <span class="white-font">Our Community</span><br/>
+                <div class="offset-1 col-md-3 pt-md-5 pb-md-5">
+                    <span class="white-font" style="font-variant: titling-caps;">Our Community</span><br/><br/>
                     <span class="orange-font">See new inventory first!</span><br/>
                     <input type="email" class="orange-boarder blue-font rounded-3" placeholder="Yes, here's my email"><br/>
                     <input type="submit" class="btn btn-primary blue-w-orange-button rounded-3 mt-1 mb-3" value="Subscribe" onclick="subscribe()">
