--- a/products/templates/product-list-cards.html
+++ b/products/templates/product-list-cards.html
@@ -12,7 +12,7 @@
                                 </div>
                                 <div class="card-body">
                                     <p class="card-title" style="height: 3em; font-weight: bold;">{{ product.title }}</p>
-                                    <p style="margin-bottom: 1rem" class="card-text">${{ product.retail_price_int|intcomma }}</p>
+                                    <p style="margin-bottom: 1rem" class="card-text">${{ product.retail_price|intword|intcomma }}</p>
                                 </div>
                             </div>
                         </div>
