--- a/base/static/css/carousel.css
+++ b/base/static/css/carousel.css
@@ -5,15 +5,24 @@
 }
 
 .carousel-control-prev {
-  margin-left: -50px;
+  margin-left: -12%;
 }
 
 .carousel-control-next {
-  margin-right: -50px;
+  margin-right: -12%;
 }
 
 .carousel-indicators {
-  bottom: -50px;
+  justify-content: start;
+}
+
+.carousel-indicators ul {
+  list-style-type: none;
+
+}
+
+.carousel-indicators li {
+  height: 100px!important;
 }
 
 .carousel-indicators [data-bs-target] {
