--- a/store/templates/join-the-movement-section.html
+++ b/store/templates/join-the-movement-section.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-6" style="height: 538px; background-image: url('{% get_static_prefix %}img/join_hero.webp'); background-size: cover; background-position: center;">
-                    <div class="vertical-center">
+                    <div class="text-center">
                         <h3 class="orange-font cinzel-font mt-5">JOIN THE MOVEMENT</h3>
                         <span class="mt-2">Let us help grow your vintage business without making any more<br/>
                             investments than you already have... we are in this together!</span>
