Updated look of order pages.  Fixed button rounding.  Started code for Mailchimp

--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -28,7 +28,7 @@
                             {% endfor %}
                         </div>
                         {% endif %}
-                        <div class="row" id="card-container">
+                        <div class="row pt-3" id="card-container">
                             <div class="col">
                                 <div class="row">
                                     <div id="form-container">
@@ -37,7 +37,7 @@
                                 </div>
                             </div>
                         </div>
-                        <input style="margin-top: 1em" type="submit" value="Place Order" onclick="onGetCardNonce(event)">
+                        <input class="btn btn-primary blue-button rounded-3 mb-5 mt-2" type="submit" value="Place Order" onclick="onGetCardNonce(event)">
                         {% endif %}
                     </form>
                 </div>
