--- a/orders/templates/orders/order/created.html
+++ b/orders/templates/orders/order/created.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block page_title %}Order Complete{% endblock %}
+{% block page_title %}Global Vintage Love | Order Complete{% endblock %}
 
 
 {% block content %}
-    <div class="container">
+    <div class="container body-padding">
         <h1>Your order has been completed</h1>
         <span>Thank you for shopping with Vintage Love!</span>
     </div>
