--- a/store/templates/join-the-movement-section.html
+++ b/store/templates/join-the-movement-section.html
@@ -31,7 +31,7 @@
                         </div>
                         <div class="row g-4 mt-1">
                             <div class="col-10 offset-1">
-                                <button class="form-control btn blue-button" type="button">Submit</button>
+                                <button class="form-control btn blue-button rounded-3" type="button">Submit</button>
                             </div>
                         </div>
                     </form>
