Updated rendering for navigation bar.  Added tracking codes.  Added price filtering

--- a/base/static/css/Navigation-with-Button.css
+++ b/base/static/css/Navigation-with-Button.css
@@ -15,6 +15,10 @@ body {
   color: #0A486A;
 }
 
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(221,221,221, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
 .navigation-clean-button {
   padding-top: .75rem;
   padding-bottom: .75rem;
