--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -20,13 +20,15 @@
 <body style="overflow-x: hidden;">
     <nav class="navbar navbar-light navbar-expand-lg navigation-clean-button">
         <div class="container-fluid">
-            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
-                <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon" style="color: #ffffff"></span>
-            </button>
+            <div class="text-center d-lg-none" style="width: 100%">
+                <button data-bs-toggle="collapse" class="navbar-toggler custom-toggler" data-bs-target="#navcol-1">
+                    <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
             <a class="navbar-brand d-none d-sm-block" href="{% url 'store:index' %}">
-                <img src="{% get_static_prefix %}img/logo.png" style="width: 102px;"></a>
-            <a class="navbar-brand text-wrap vintage-font" href="{% url 'store:index' %}">GLOBAL VINTAGE LOVE</a>
-
+                <img src="{% get_static_prefix %}img/logo.png" style="width: 102px;">
+            </a>
+            <a class="navbar-brand text-wrap vintage-font text-center" href="{% url 'store:index' %}">GLOBAL VINTAGE LOVE</a>
             <div class="collapse navbar-collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="{% url 'products:all-products' %}">Shop Now</a></li>
