--- a/products/templates/product-list.html
+++ b/products/templates/product-list.html
@@ -2,10 +2,12 @@
 {% block content %}
     <div class="container">
         <div class="row">
+            {% comment %}
             <div class="col-3">
                 {% include 'filters.html' %}
             </div>
-            <div class="col-9">
+            {% endcomment %}
+            <div class="col-12">
                 {% include 'product-list-cards.html' %}
             </div>
         </div>
