--- a/products/templates/product-list-cards.html
+++ b/products/templates/product-list-cards.html
@@ -7,11 +7,11 @@
                     <a class="custom-card" href="{% url 'products:product' product.id %}">
                         <div class="card product-card h-100" style="width: 18rem;">
                             <div class="text-center card-img-top" style="height: 10rem; width: auto; margin-top: 0.5rem;">
-                                <div id="productCarousel-{{ product.id }}" class="carousel carousel-dark slide" data-bs-interval="false" data-bs-ride="carousel">
+                                <div id="productCarousel-{{ product.id }}" class="carousel carousel-dark slide lazy" data-bs-interval="false" data-bs-ride="carousel">
                                     <div class="carousel-inner">
                                         {% for image in product.images %}
                                         <div class="carousel-item {% if forloop.first %}active{% endif %} w-100">
-                                            <img style="margin: auto; height: 10rem; width: {% if image.image.image_width < image.image.image_height %}{% widthratio image.image.image_width image.image.image_height 17 %}{% else %}{% widthratio image.image.image_height image.image.image_width 17 %}{% endif %}rem;" src="{{ image.image.url }}" class="d-block"/>
+                                            <img style="margin: auto; height: 10rem; width: {% if image.image.image_width < image.image.image_height %}{% widthratio image.image.image_width image.image.image_height 10 %}{% else %}{% widthratio image.image.image_height image.image.image_width 10 %}{% endif %}rem;" {% if forloop.first %}src={% else %}data-src={% endif %}"{{ image.image.url }}" class="d-block"/>
                                         </div>
                                         {% endfor %}
                                     </div>
@@ -26,7 +26,7 @@
                                 </div>
                             </div>
                             <div class="card-body">
-                                <p class="card-title" style="height: 3em; font-weight: bold;">{{ product.title }}</p>
+                                <p class="card-title" style="height: 4em; font-weight: bold;">{{ product.title }}</p>
                                 <p style="margin-bottom: 1rem" class="card-text">${{ product.retail_price|intword|intcomma }}</p>
                             </div>
                         </div>
@@ -65,3 +65,6 @@
         </ul>
     {% endif %}
     </nav>
+{% block end_body %}
+<script src="{% get_static_prefix %}js/lazy.js"></script>
+{% endblock %}
