--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -4,7 +4,7 @@
     {% include 'category-nav.html' %}
     <section id="hero-section">
         <div class="d-flex flex-row flex-lg-nowrap flex-wrap">
-            <div class="flex-column order-lg-first order-last align-self-center" style="padding-left: 4em; padding-right: 3em; padding-bottom: 2em; width: 60%;">
+            <div class="flex-column order-lg-first order-last align-self-center w-lg-60" style="padding-left: 4em; padding-right: 3em; padding-bottom: 2em;">
                 <h3 class="orange-font">/&nbspGlobal Vintage Love&nbsp/</h3>
                 <h2>Unlock the world of vintage one treasure at a time</h2>
                 <span>
