--- a/products/templates/product-page.html
+++ b/products/templates/product-page.html
@@ -28,16 +28,20 @@
                 <div id="productCarousel" class="carousel carousel-dark slide lazy" style="margin-left: 120px" data-bs-interval="false" data-bs-ride="carousel">
                     <div class="carousel-indicators" style="display: block; margin: 0; padding: 0; margin-left: -100px; width: 100px; z-index: 0;">
                         {% for product_image in product_images %}
+                            {% if forloop.counter0 < 5 %}
                         <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="{{ forloop.counter0 }}" {% if forloop.first %}class="active" aria-current="true" {% endif %}aria-label="Slide {{ forloop.counter }}">
                             <img class="d-block w-100" src="{{ product_image.image.url }}">
                         </button><br/>
+                            {% endif %}
                         {% endfor %}
                     </div>
                     <div class="carousel-inner">
                         {% for product_image in product_images %}
+                            {% if forloop.counter0 < 5 %}
                         <div class="carousel-item {% if forloop.first %}active{% endif %}">
                             <img src="{{ product_image.image.url }}" class="d-block" style="margin: auto; height: 25rem; width: {% if image.image.image_width < image.image.image_height %}{% widthratio image.image.image_width image.image.image_height 25 %}{% else %}{% widthratio image.image.image_height image.image.image_width 25 %}{% endif %}rem;"/>
                         </div>
+                            {% endif %}
                         {% endfor %}
                     </div>
                     <button class="carousel-control-prev" style="z-index: 1;" type="button" data-bs-target="#productCarousel" data-bs-slide="prev">
